# agentmux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  package.json  plan.md
docs/: index.md  memory.md
skills/agentmux/: SKILL.md
skills/agentmux-core/: SKILL.md
skills/agentmux-memory/: SKILL.md
skills/agentmux-workflow/: SKILL.md
skills/jj-workflow/: SKILL.md  prompt.md
skills/shared-context-writer/: prompt.md  skill.toml
src/: app.rs  ghostty.rs  index.ts  jj.rs  main.rs  tabs.rs  watcher.rs
src/agents/: mod.rs
src/context/: matcher.ts  mod.rs
src/ipc/: client.rs  mod.rs  server.rs
src/lib/: format.ts  paths.ts
src/memory/: index.ts
src/memory/commands/: init.ts  query.ts  record.ts
src/memory/schema/: types.ts
src/memory/storage/: config.ts  store.ts
src/plan/: index.ts
src/plan/commands/: commit.ts  init.ts  link.ts  timeline.ts
src/plan/storage/: config.ts  manifest.ts  registry.ts  util.ts
src/skills/: mod.rs
src/terminal/: mod.rs  pty.rs  surface.rs
src/ui/: mod.rs
workflows/: README.md
workflows/code-commit-review-loop/: SKILL.md
workflows/detailed-commits/: SKILL.md
