[package]
name = "agentmux"
version = "0.1.0"
edition = "2021"
authors = ["AgentMux Team"]
description = "🌊 Minimal terminal multiplexer for AI agent collaboration"
license = "MIT"
repository = "https://github.com/dpbmaverick98/agentmux"

[[bin]]
name = "agentmux"
path = "src/main.rs"

[dependencies]
# Terminal UI
crossterm = "0.27"
ratatui = "0.24"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# File watching
notify = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Process management
portable-pty = "0.8"
which = "6.0"
nix = { version = "0.27", features = ["process", "signal"] }

# IPC
interprocess = { version = "2.4", features = ["tokio"] }

# Terminal emulation
alacritty_terminal = "0.24"
# FFI for Ghostty (future)
libc = "0.2"

# HTTP client (for future API)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Directories
dirs = "5.0"

# Time
chrono = "0.4"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true